// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item tests should render a link correctly 1`] = `
<span>
  <li>
    <a
      class=""
      href="/to"
    >
      <span>
        <svg
          class="Matchbox-Icon"
          fill="currentColor"
          height="18"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle"
          viewBox="0 0 40 40"
          width="18"
        >
          <g>
            <path
              d="m33.4 13.4v-3.4l-13.4 8.4-13.4-8.4v3.4l13.4 8.2z m0-6.8q1.3 0 2.3 1.1t0.9 2.3v20q0 1.3-0.9 2.3t-2.3 1.1h-26.8q-1.3 0-2.3-1.1t-0.9-2.3v-20q0-1.3 0.9-2.3t2.3-1.1h26.8z"
            />
          </g>
        </svg>
      </span>
      label
    </a>
  </li>
</span>
`;

exports[`Item tests should render children correctly 1`] = `
<span>
  <li>
    <a
      class=""
    >
      <span>
        <svg
          class="Matchbox-Icon"
          fill="currentColor"
          height="18"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle"
          viewBox="0 0 40 40"
          width="18"
        >
          <g>
            <path
              d="m33.4 13.4v-3.4l-13.4 8.4-13.4-8.4v3.4l13.4 8.2z m0-6.8q1.3 0 2.3 1.1t0.9 2.3v20q0 1.3-0.9 2.3t-2.3 1.1h-26.8q-1.3 0-2.3-1.1t-0.9-2.3v-20q0-1.3 0.9-2.3t2.3-1.1h26.8z"
            />
          </g>
        </svg>
      </span>
      label
      <svg
        class="Matchbox-Icon"
        fill="currentColor"
        height="18"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle"
        viewBox="0 0 40 40"
        width="18"
      >
        <g>
          <path
            d="m25.7 12.3l-7.7 7.7 7.7 7.7-2.3 2.3-10-10 10-10z"
          />
        </g>
      </svg>
    </a>
    <ul>
      <span>
        <li>
          <a
            class=""
            href="/child1"
          >
            child 1
          </a>
        </li>
      </span>
      <span>
        <li>
          <a
            class=""
            href="/child2"
          >
            child 2
          </a>
        </li>
      </span>
    </ul>
  </li>
</span>
`;
